# superwhisperer-lab

./: .gitignore  AGENTS.md  README.md  common.py  env.example  eval_template.csv  evaluate_superwhisper_run.py  export_superwhisper_history.py  mode_specs.json  pyproject.toml  run_superwhisper_queue.py  sync_superwhisper_modes.py
prompts/: email-communication-mode.md  engineering-mode.md  product-design-mode.md  product-engineering-translator-mode.md
tests/: test_common.py  test_evaluate.py
